--- a/Poker/nbproject/private/private.properties
+++ b/Poker/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\s1601396\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\osku0\\AppData\\Roaming\\NetBeans\\8.1rc\\build.properties
