--- a/Poker/nbproject/project.properties
+++ b/Poker/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=GUI.Start
+main.class=GUI.TexasHoldemSetup
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
